2008-06-20  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/EncapsulateFieldDialog.cs: Make
	Field/Property name columns expandable.

2008-06-20  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/OverridesImplementsDialog.cs: New.
	* gtk-gui/MonoDevelop.Ide.OverridesImplementsDialog.cs: New.
	* gtk-gui/gui.stetic: Update.
	* RefactoryCommands.cs (OverrideOrImplementMembers): New.
	* Makefile.am:
	* MonoDevelop.Ide.mdp: Update.

2008-06-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/IdePreferences.cs: Use msbuild as default file
	  format.

2008-06-17  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/FileTemplateReference.cs: Provide a valid
	  .NET identifier from the project name for templating file names.

2008-06-17  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/NodeCommandHandler.cs,
	  MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs: Handle delete commands
	  in the base node command handler instead of the tree view, so that
	  subclassed command handlers can override them properly.
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs: Don't
	  allow deleting child files. Fix bad casting pattern. 
	* MonoDevelop.Ide.Tasks/TaskService.cs: Avoid an exception on closing
	  solutions without user tasks.

2008-06-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.mdp, Makefile.am: Fixed makefile.

2008-06-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ClassBrowser/ClassBrowserPadWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Pads.ClassBrowser.ClassBrowserPadWidget.cs:
	  Changed class browser widget.

2008-06-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs: Fix
	  nullref (bug #400317).

2008-06-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Debugging/DebuggingService.cs: Dispose the debug
	  session when done.